--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
+        "tailwindcss-spinner": "^1.2.0",
         "vite": "^4.0.0"
     }
 }
