--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
         "laravel-vite-plugin": "^0.8.0",
         "tailwindcss-spinner": "^1.2.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "progressbar.js": "^1.1.0"
     }
 }
